BIENVENIDO AL REPOSITORIO DE VANESSA

--- a/git.html
+++ b/git.html
@@ -3,6 +3,6 @@
 <tittle>BIENVENIDO A GIT<tittle>
 </HEAD>
 <body>
-  <h1> BIENVENIDO REPOSITORIO DE VANESSA <h1>
+  <h1> BIENVENIDO AL REPOSITORIO DE VANESSA <h1>
 </body>
 </HTML>
